--- a/latex/titlepage.tex
+++ b/latex/titlepage.tex
@@ -19,6 +19,10 @@ BP 125\\
 ~
 \vfill
 \begin{center}
+Rapport de projet de $3^{eme}$ année\\
+Filière Génie logiciel et systèmes informatiques\\
+~\\
+~\\
 \textsc{\begin{LARGE}Refactoring IzPack\end{LARGE}}\\[1cm]
 \end{center}
 \vfill
