--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -16,10 +16,14 @@ Cependant, cette pratique est indispensable pour assurer la pérennité de l'app
 En effet, l'ajout de fonctionnalité se fait souvent au détriment de la lisibilité et il est possible de trouver un meilleur design après un temps de réfléxion.
 Le refactoring permet de corriger la première implémentation réalisée et de produire du code plus mature et plus stable.
 
+Toutefois, cette pratique n'est pas appliquée due à l'abscence d'intérêt à court terme.
+IzPack présente aujourd'hui des améliorations possible réalisables grâce au refactoring.
 
 % Améliorer un logiciel ne se résume pas à ajouter des fonctionnalités ou corriger de bugs.
 % Faire du refactoring permet de rendre le code plus maintenable, lisible : le vieil adage ``ça fonctionne, alors on n'y touche pas'' a mené plus d'un projet dans l'impasse du code in-maintenable.
 % Les résultats ne sont pas visibles, car d'un point de vue extérieur rien n'a changé. Pourtant pour un développeur cela signifie un développement présent et futur plus rapide et plus aisé.
 % La suppression/remplacement d'une librairie obsolète entre dans ce cas.
-IzPack, un générateur d'installeur open-source possède justement une dépendance de ce type avec NanoXml. Dans le cadre de notre projet de troisième année a l'ISIMA, nous avons été chargé du refactoring de cette partie.
+% IzPack, un générateur d'installeur open-source possède justement une dépendance de ce type avec NanoXml. 
+Dans le cadre de notre projet de troisième année a l'ISIMA, nous avons été chargé du refactoring de IzPack. 
+Nous verrons d'abord le fonctionnement d'IzPack, puis le cadre de travail du projet et enfin le travail réalisé et ses résultats.
 % inspiration en baisse, ecriture suspendue
