--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -17,7 +17,8 @@ En effet, l'ajout de fonctionnalité se fait souvent au détriment de la lisibil
 Le refactoring permet de corriger la première implémentation réalisée et de produire du code plus mature et plus stable.
 
 Toutefois, cette pratique n'est pas appliquée due à l'abscence d'intérêt à court terme.
-IzPack présente aujourd'hui des améliorations possible réalisables grâce au refactoring.
+IzPack présente aujourd'hui des améliorations possible réalisables grâce au refactoring, notament dans l'utilisation de la librairie permettant de traiter NanoXml.
+Cette librairie entraîne un certain nombre de problèmes de part sa vestuté et utiliser les librairies natives à java régleraient ces problèmes.
 
 % Améliorer un logiciel ne se résume pas à ajouter des fonctionnalités ou corriger de bugs.
 % Faire du refactoring permet de rendre le code plus maintenable, lisible : le vieil adage ``ça fonctionne, alors on n'y touche pas'' a mené plus d'un projet dans l'impasse du code in-maintenable.
