gouvernement de merde >_<

--- a/latex/master.tex
+++ b/latex/master.tex
@@ -95,7 +95,7 @@ pdfpagemode= UseOutlines,
 % \input{partie1}
 %---------------------------------------
 \renewcommand{\chaptermark}[1]{\markboth{\chaptername~\thechapter{} : #1}{}} \renewcommand{\sectionmark}[1]{\markright{\thesection{} #1}}
-\chapter{Izpack}
+\chapter{IzPack}
 \pagestyle{plain}
 \input{partie1}
 %---------------------------------------
